@@ -29,33 +29,21 @@ Siga estes passos:
 . Na _Etapa 1_ do assistente *Implantar modelo OVF*, clique em *Selecionar um modelo OVF* para selecionar o modelo baixado `KeystoneCollector-latest.ova` arquivo.
 . Na _Etapa 2_, especifique o nome da VM e selecione a pasta da VM.
 . Na _Etapa 3_, especifique o recurso de computação necessário para executar a VM.
-. Na _Etapa 4: Revisar detalhes_, verifique a exatidão e a autenticidade do arquivo OVA. Versões do vCentre anteriores à 7.0u2 não conseguem verificar automaticamente a autenticidade do certificado de assinatura de código. O vCentre 7.0u2 e posteriores podem executar as verificações; no entanto, para isso, a autoridade de certificação de assinatura deve ser adicionada ao vCentre.  Siga estas instruções para sua versão do vCenter:
+. Na etapa 4: Revisar detalhes, verifique a correção e a autenticidade do arquivo OVA.
 +
-.vCenter 7.0u1 e anteriores: Saiba mais
-[%collapsible]
-====
-O vCenter valida a integridade do conteúdo do arquivo OVA e se um resumo de assinatura de código válido é fornecido para os arquivos contidos no arquivo OVA.  Entretanto, isso não valida a autenticidade do certificado de assinatura de código.  Para verificar a integridade, você deve baixar o certificado de resumo de assinatura completo e verificá-lo com o certificado público publicado pela Keystone.
+O armazenamento confiável raiz do vCenter contém apenas certificados VMware. A NetApp usa o Entrust como autoridade de certificação, e esses certificados precisam ser adicionados ao armazenamento confiável do vCenter.
 
-.. Clique no link *Editor* para baixar o certificado completo de assinatura.
-.. Faça o download do certificado público do _Keystone Billing_ em https://keystone.netapp.com/downloads/OVA-SSL-NetApp-Keystone-20251020.pem["este link"^].
-.. Verifique a autenticidade do certificado de assinatura OVA comparando-o com o certificado público usando o OpenSSL:
-`openssl verify -CAfile OVA-SSL-NetApp-Keystone-20251020.pem keystone-collector.cert`
-
-
-====
 +
-.vCenter 7.0u2 e posterior: Saiba mais
-[%collapsible]
-====
-As versões 7.0u2 e posteriores do vCenter são capazes de validar a integridade do conteúdo do arquivo OVA e a autenticidade do certificado de assinatura de código, quando um resumo de assinatura de código válido é fornecido.  O armazenamento confiável raiz do vCenter contém apenas certificados VMware.  A NetApp usa o Entrust como autoridade de certificação, e esses certificados precisam ser adicionados ao armazenamento confiável do vCenter.
-
 .. Baixe o certificado de CA de assinatura de código da Sectigo. https://comodoca.my.salesforce.com/sfc/p/1N000002Ljih/a/3l000000oAhy/QCCby12C7cYo50nNyic6AuG1KFcwe1rDn1EknfTaUzY["aqui"^].
 .. Siga os passos no `Resolution` seção deste artigo da base de conhecimento (KB): https://kb.vmware.com/s/article/84240[] .
++
 
+NOTE: Para versões do vCenter 7.x e anteriores, você deve atualizar o vCenter e o ESXi para a versão 8.0 ou posterior. As versões anteriores não são mais suportadas.
 
-====
 +
 Quando a integridade e a autenticidade do OVA Keystone Collector forem validadas, você poderá ver o texto. `(Trusted certificate)` com a editora. image:ova-deploy-1.png["OVA UI exibindo um certificado verificado"]
+
+
 
 . Na _Etapa 5_ do assistente *Implantar modelo OVF*, especifique o local para armazenar a VM.
 . Na _Etapa 6_, selecione a rede de destino que a VM usará.
