@@ -17,7 +17,7 @@ summary: Seu sistema VMware vSphere deve atender a vários requisitos antes que 
 Seu sistema VMware vSphere deve atender a vários requisitos antes que você possa instalar o Keystone Collector.
 
 .Pré-requisitos para a VM do servidor Keystone Collector:
-* Sistema operacional: servidor VMware vCenter e ESXi 6.7 ou posterior
+* Sistema operacional: servidor VMware vCenter e ESXi 8.0 ou posterior
 * Núcleo: 1 CPU
 * RAM: 2 GB de RAM
 * Espaço em disco: 20 GB vDisk
