@@ -22,6 +22,15 @@ Problemas encontrados em versões anteriores dos serviços NetApp Keystone STaaS
 
 
  a| 
+As assinaturas exibem incorretamente o status *Acima do Limite de Burst* no painel do Digital Advisor , apesar do consumo estar dentro dos limites de burst permitidos.
+ a| 
+Fixo
+ a| 
+2025-12-08
+
+
+
+ a| 
 Linha de limite de pico ausente nos gráficos de tendência de consumo para assinaturas configuradas com uma configuração MetroCluster no painel do Digital Advisor , mostrando um status incorreto *Acima do limite de pico*.
  a| 
 Fixo
